# pyrolld

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
rolld/: __init__.py  _types.py  roll.py
tests/: test_roll.py
